--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ kiwisolver==1.4.8
 matplotlib==3.10.3
 numpy==2.3.1
 numpy-stl==3.2.0
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
