--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ fonttools==4.59.0
 git-filter-repo==2.47.0
 kiwisolver==1.4.8
 matplotlib==3.10.3
-numpy==2.3.1
+numpy==1.26.4
 numpy-stl==3.2.0
 openpyxl==3.1.5
 packaging==25.0
@@ -18,3 +18,5 @@ scipy==1.16.0
 six==1.17.0
 typing_extensions==4.14.1
 tzdata==2025.2
+pyarrow==15.0.0
+fastparquet==2024.5.0
